sso/k8s-manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sso-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  # tls:
  # - hosts:
  #   - sso.localhost
  #   secretName: sso-tls-secret
  rules:
  - host: sso.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sso-app-service
            port:
              number: 80
